--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
+# For ignoring any specific file.
+
 new-file.txt
+
+#For any folder for ignorence
+bin/
+
+#for any specific file format for ignorence
+
+*.cpp
